# dojoburo

./: .env.example  .env.starter  .gitignore  README.md  SECURITY.md  _rep.mjs  index.html  package-lock.json  package.json  tsconfig.api.json  vercel.json  vite.config.ts
api/: agent-proxy.ts  agent-run.ts  chat.ts  checkout-webhook.ts  checkout.ts  connect.ts  domain.ts  fonts.ts  secrets.ts  settle-pending.ts  settle.ts  team.ts  tool-action.ts  tool-data.ts  tts.ts
api/_lib/: accounts.ts  connections.ts  connectors.ts  db.ts  fx.ts  llm.ts  origin.ts  privyAuth.ts  secretsVault.ts  settle.ts  stripe.ts  teamAccess.ts  vault.ts  worktasks.ts
db/: connectors.sql  schema.sql  secrets.sql
docs/: CONNECTORS.md  DEPLOYMENT.md  PROD-CHECKLIST.md
public/: _headers  manifest.webmanifest  robots.txt  sw.js
scripts/: gen-favicon.mjs  gen-thumbs.mjs  shot.mjs  test-webhook-lib.mjs  ui-verify.mjs  verify-bricks.mjs  verify-full.mjs  verify-mobile.mjs  verify-visual.mjs  xrpl-smoke.mjs
src/: App.tsx  CompanySite.tsx  DojoGuide.tsx  Landing.tsx  LegalPage.tsx  WidgetApp.tsx  agentView.ts  audio.ts  index.css  main.tsx  store.ts  vite-env.d.ts  workshop.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/agents/: agentApps.ts  agentWorkspace.ts  autopilot.ts  deliverables.ts  engineStore.ts  externalAgents.ts  localDraft.ts  secretsStore.ts  workApi.ts  workStore.ts
src/auth/: AuthGate.tsx  AuthProvider.tsx  controls.ts  privyGate.tsx
src/city-kit/: DojoCity.tsx  README.md  types.ts  (+1 more)
(+150 files in other folders)
